...
            android:maxLength="30"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Register Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:enabled="false"
        android:padding="12dp"
        android:text="@string/btn_register"
...
