...
    <!-- Authentication - Login -->
    <string name="title_login">Login</string>
    <string name="hint_mobile_number">Mobile Number (10 digits)</string>
    <string name="btn_send_otp">Send OTP</string>
    <string name="prompt_need_account">Don\'t have an account?</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_mobile">Please enter a valid 10-digit mobile number</string>

    <!-- Authentication - Register -->
    <string name="title_register">Register</string>
    <string name="register_instructions">Create a new account to start using askChinna</string>
    <string name="hint_name">Your Name</string>
    <string name="btn_register">Register</string>
...
